apps/voting-app/results-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: result.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result 
                port:
                  number: 8081
